# pgs_runtime

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
omnibachi/: cli.py
omnibachi/implementation/conformance/: runner.py
omnibachi/implementation/egress/cli/: output_adapter.py
omnibachi/implementation/egress/http/: response_adapter.py
omnibachi/implementation/egress/trace/: __init__.py  trace_egress_adapter.py  trace_md_renderer.py  trace_png_renderer.py
omnibachi/implementation/evidence/: __init__.py  classifier.py  cli.py  conformance_test.py  hint_engine.py  locator.py  parser.py  reporter.py
omnibachi/implementation/execution/: __init__.py
omnibachi/implementation/execution/host/: __init__.py  runtime_loader.py  workflow_runner.py
omnibachi/implementation/execution/machine/: __init__.py  admission.py  dag_model.py  errors.py  execution_context.py  execution_identity.py  execution_policy_loader.py  trace_emitter.py
omnibachi/implementation/ingress/cli/: errors.py  (+1 more)
pgs_runtime/: cli.py  conformance.py  ct_errors.py  ct_execute.py  ct_executor.py  dispatcher.py  evidence.py  loader.py  memory.py  scheduler.py  server.py
pgs_runtime/examine/: README.md  __init__.py  classifier.py  cli.py  hint_engine.py  locator.py  reporter.py
scripts/: verify_release.py
testbed/: run_runtime_tests.py
testbed/implementations/: test_cs_runtime.py
testbed/implementations/tests/: README.md  __init__.py  test_cs_binding.py  test_ct_conformance.py  test_determinism.py  test_failure_modes.py  test_helpers.py  test_snapshot_loading.py  test_workflow_execution.py
(+12 files in other folders)
