[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgs_runtime"
version = "0.3.1"
description = "PGS runtime for Protocol-Governed Systems"
readme = "README.md"
requires-python = ">=3.10"

license = "Apache-2.0"

authors = [
  { name = "Bachi" }
]

dependencies = []

keywords = ["pgs", "protocol", "runtime", "workflow", "execution"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/bachipeachy/pgs_runtime"
Repository = "https://github.com/bachipeachy/pgs_runtime"

[project.scripts]
pgs_runtime = "pgs_runtime.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["pgs_runtime*"]
exclude = ["testbed*", "scripts*", "*.tests"]